@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.sakaiproject.purepoms</groupId>
-        <artifactId>sakai-standard-tool</artifactId>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>master</artifactId>
         <version>2.9-SNAPSHOT</version>
     </parent>
 
@@ -26,15 +26,6 @@
         <module>calendar-util/util</module>
     </modules>
     
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sakai.assignment.version>2.9-SNAPSHOT</sakai.assignment.version>
-        <sakai.jsf.version>2.9-SNAPSHOT</sakai.jsf.version>
-        <sakai.jsf111.version>2.9-jsf111-SNAPSHOT</sakai.jsf111.version>
-        <sakai.site.version>2.9-SNAPSHOT</sakai.site.version>
-        <sakai.velocity.version>2.9-SNAPSHOT</sakai.velocity.version>   
-    </properties>
-
     <scm>
         <connection>scm:svn:https://source.sakaiproject.org/svn/calendar/trunk</connection>
         <developerConnection>scm:svn:https://source.sakaiproject.org/svn/calendar/trunk</developerConnection>
@@ -48,30 +39,6 @@
             <url>scpexe://source.sakaiproject.org/var/www/html/release/calendar/${project.version}</url>
         </site>
     </distributionManagement>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>maven2-central-repo</id>
-            <name>Maven2 Central Repo</name>
-            <url>http://repo1.maven.org/maven2/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>Sakai Plugin Repo</id>
-            <url>http://source.sakaiproject.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
 
     <repositories>
         <repository>
@@ -98,18 +65,6 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <repository>
-            <id>default</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo1.maven.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -129,12 +84,6 @@
                 <groupId>${project.groupId}</groupId>
                 <artifactId>sakai-calendar-util</artifactId>
                 <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.assignment</groupId>
-                <artifactId>sakai-assignment-api</artifactId>
-                <version>${sakai.assignment.version}</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
@@ -157,40 +106,7 @@
                 <artifactId>sakai-mergedlist-util</artifactId>
                 <version>${sakai.site.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.velocity</groupId>
-                <artifactId>sakai-velocity-tool-api</artifactId>
-                <version>${sakai.velocity.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.velocity</groupId>
-                <artifactId>sakai-velocity-tool</artifactId>
-                <version>${sakai.velocity.version}</version>
-            </dependency>  
         </dependencies>
     </dependencyManagement>
     
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <debug>true</debug>
-                    <links>
-                        <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
-                        <link>http://download.oracle.com/javase/6/docs/api/</link>
-                    </links>
-                    <breakiterator>true</breakiterator>
-                    <verbose>false</verbose>
-                    <aggregate>true</aggregate>
-                    <minmemory>168m</minmemory>
-                    <maxmemory>1024m</maxmemory>
-                    <additionalJOption>-J-Xms168m -J-Xmx1024m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
